mejorado el monitor ahora disparan casi todas